--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,22 @@
-#root {
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+.app {
+  height: 100vh;
+  display: grid;
+}
+
+.container {
+  height: calc(100vh - 8.5em);
+  display: flex;
+}
+
+.island {
+  overflow-y: scroll;
+  flex: 1;
 }
 
 .contact {
