--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,1 +1,118 @@
+.certification {
+  margin: 1em;
+  padding: 1em;
+}
 
+.title {
+  margin: 1em;
+  font-size: 2.5em;
+  font-weight: 500;
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  width: 80em;
+  padding: 2em;
+  margin: 0 2.5em;
+  border: 2px solid #cceeff;
+  border-radius: 0.5em;
+  box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+}
+
+.certificate-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 20em;
+}
+.certificate-details-header {
+  text-align: center;
+  padding: 0.3em;
+  text-transform: uppercase;
+  font-size: 0.75em;
+  width: 100%;
+  font-weight: 300;
+  font-family: "Open Sans", sans-serif;
+  background-color: #f5f5f5;
+  border: 2px solid #f5f5f5;
+  border-radius: 0.5em;
+}
+
+.certificate-details-heading {
+  text-transform: uppercase;
+  flex-wrap: wrap;
+  font-size: 1.5em;
+  font-weight: 500;
+  padding: 0.3em;
+}
+
+.certificate-details-status {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.8em;
+  font-weight: 300;
+  font-family: "Open Sans", sans-serif;
+  padding: 0.3em;
+  width: 100%;
+  background-color: #cceeff;
+  border: 2px solid #cceeff;
+  border-radius: 1em;
+}
+
+.exam-structure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 15em;
+}
+
+.exam-heading {
+  text-transform: capitalize;
+  font-size: 0.9em;
+  font-weight: 500;
+}
+
+.round {
+  display: flex;
+  flex-direction: row;
+  font-family: "Open Sans", sans-serif;
+  width: 100%;
+  padding: 0 0.5em;
+  margin: 0.5em 0.5em;
+}
+
+.round-details {
+  text-transform: uppercase;
+  background-color: #dfe6f2;
+  padding: 0 0.8em;
+  margin: 0.5em 0.4em;
+  border: 2px solid #dfe6f2;
+  border-radius: 2em;
+  font-size: 0.8em;
+  font-weight: 700;
+}
+
+.exam-details {
+  text-transform: uppercase;
+  border: 2px solid #65bffe;
+  border-radius: 2em;
+  color: #65bffe;
+  padding: 0.8em 1.2em;
+  font-weight: 700;
+}
+
+.exam-details:hover {
+  background-color: #65bffe;
+  color: #fff;
+  cursor: pointer;
+}
+
+.learning {
+  margin: 0 1em;
+  padding: 0 1em;
+}
