--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -4,8 +4,8 @@
   top: 9em;
   left: 0em; */
   display: flex;
-  height: 50em;
-  width: 8em;
+  /* height: 50em; */
+  /* width: 8em; */
   margin: 0;
   flex-shrink: 0;
 }
