--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -22,6 +22,7 @@
   border: 2px solid #cceeff;
   border-radius: 0.5em;
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
+  background-color: #fffefe;
 }
 
 .certificate-details {
