--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@
 }
 
 .island {
+  display: flex;
   overflow-y: scroll;
   flex: 1;
   background-color: #f3f6fe;
@@ -37,4 +38,25 @@
 
 .contact:hover {
   cursor: pointer;
+}
+
+.error {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3em;
+}
+
+.errorhandle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 2em;
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
 }
