--- a/src/assets/css/Header.css
+++ b/src/assets/css/Header.css
@@ -107,7 +107,7 @@
   cursor: pointer;
 }
 
-.program-id:last-child {
+.selected {
   background-color: #fff;
   color: black;
   border: 2px solid #fff;
