--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -10,7 +10,7 @@
 }
 
 .certification > .card {
-  width: 80em;
+  width: 80vw;
 }
 .card {
   display: flex;
@@ -23,6 +23,11 @@
   border-radius: 0.5em;
   box-shadow: 0 0.2rem 0.5rem rgba(0, 0, 0, 0.4);
   background-color: #fffefe;
+  transition: all 500ms ease;
+}
+
+.card:hover {
+  box-shadow: none;
 }
 
 .certificate-details {
@@ -30,7 +35,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 20em;
+  width: 20vw;
 }
 .certificate-details-header {
   text-align: center;
@@ -83,7 +88,6 @@
 .round {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
   font-family: "Open Sans", sans-serif;
   width: 100%;
@@ -127,6 +131,10 @@
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.left {
+  border-right: 2px solid #65bffe;
 }
 
 .module-details {
