--- a/src/assets/css/Module.css
+++ b/src/assets/css/Module.css
@@ -5,21 +5,28 @@
 .submodule {
   padding: 1em;
   background-color: #e0e6f2;
-  width: 10em;
+  width: 15em;
   height: calc(100vh - 8.5em);
 }
 
 .submodule-option {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  padding: 0.5em 1em;
 }
 
 .submodule-menu {
   display: flex;
   flex-direction: row;
-  justify-content: center;
   align-items: center;
-  height: 5em;
+  height: 4em;
+}
+
+.menu-heading {
+  color: black;
+}
+
+.active.submodule-menu {
+  background-color: #cad3e0;
+  color: white;
 }
