--- a/src/assets/css/Submodule.css
+++ b/src/assets/css/Submodule.css
@@ -15,13 +15,12 @@
 .submodule-head {
   display: flex;
   flex-direction: column;
-
   padding: 1em 0;
 }
 
 .heading {
   font-size: 2em;
-  font-weight: 500;
+  font-weight: 600;
   margin: 0.5em 0;
 }
 
@@ -48,9 +47,34 @@
 }
 
 .submodule-subheading {
-  font-weight: 400;
+  font-weight: 600;
   font-size: 1.4em;
   margin: 0.5em 0;
+}
+
+.submodule-feedback {
+  display: flex;
+  justify-content: flex-end;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #0197ff;
+}
+
+.topic-card-heading {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1em;
+  margin: 1em;
+}
+
+.card-header {
+  display: flex;
+  text-transform: uppercase;
+  padding: 0 2em;
+  margin: 0 2em;
+  justify-content: space-between;
 }
 
 .card {
@@ -105,7 +129,11 @@
   font-weight: 200;
 }
 
-.icon {
+.card-icon {
   height: 1.5em;
   padding: 0 1em;
+}
+
+.module > .heading {
+  margin: 1em 1em;
 }
