--- a/src/assets/css/Sidebar.css
+++ b/src/assets/css/Sidebar.css
@@ -17,11 +17,12 @@
 .route {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   padding: 0.8em;
   text-transform: uppercase;
   font-size: 0.8em;
+  height: 6em;
+  width: 10em;
 }
 
 .routename {
@@ -41,4 +42,6 @@
 .active {
   background-color: #e0e6f2;
   color: #152646;
+  margin: 0;
+
 }
