--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -140,7 +140,7 @@
 }
 
 .left {
-  padding: 2em;
+  padding: 1em 3em;
 }
 
 .module-details {
@@ -199,7 +199,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 2em;
+  padding: 1em 2em;
   position: relative;
 }
 
@@ -326,5 +326,6 @@
   font-weight: 900;
   font-size: 1em;
   cursor: pointer;
+  display: flex;
   justify-content: flex-end;
 }
